--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "d3-fetch": "^2.0.0",
+    "d3-scale": "^3.2.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-simple-maps": "^2.3.0",
+    "react-tooltip": "^4.2.10",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
