--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "apexcharts": "^3.22.2",
+    "d3": "^6.2.0",
     "d3-fetch": "^2.0.0",
     "d3-scale": "^3.2.3",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.7",
+    "react-d3-library": "^1.1.8",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
