--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-scroll": "^1.8.1",
     "react-simple-maps": "^2.3.0",
     "react-tooltip": "^4.2.10",
     "web-vitals": "^0.2.4"
