--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "d3": "^6.2.0",
     "d3-fetch": "^2.0.0",
     "d3-scale": "^3.2.3",
+    "emailjs-com": "^2.6.4",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-d3-library": "^1.1.8",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-scroll": "^1.8.1",
     "react-simple-maps": "^2.3.0",
+    "react-toastify": "^6.1.0",
     "react-tooltip": "^4.2.10",
     "web-vitals": "^0.2.4"
   },
